# MaiBot-Discord-Adapter

./: .gitignore  README.md  __init__.py  _manifest.json  config.py  constants.py  dependence_examine.py  filters.py  main.py  plugin.py  pyproject.toml  pyproject.voice.toml  requirements.txt  requirements.voice.txt  runtime_state.py
.github/: pull_request_template.md
docs/: setup_guide.md  voice_ai_hobbyist.md  voice_config_guide.md
src/: __init__.py  background_tasks.py  logger.py  mmc_com_layer.py  send_handler.py  utils.py
src/config/: __init__.py  config.py  config_base.py  voice_config.py
src/recv_handler/: __init__.py  discord_client.py  emoji_mapping.py  message_handler.py
src/send_handler/: __init__.py  main_send_handler.py  message_send_handler.py  thread_send_handler.py  thread_send_headler.py
src/voice/: __init__.py  base.py  voice_manager.py
src/voice/stt/: __init__.py  aliyun_stt.py  azure_stt.py  siliconflow_stt.py  tencent_stt.py
src/voice/tts/: __init__.py  acgnai_tts.py  ai_hobbyist_tts.py  ai_tts.py  azure_tts.py  gptsovits_tts.py  minimax_tts.py  siliconflow_tts.py
template/: template_config.toml
